# assissement

./: .gitignore  README.md  approach.md  pyproject.toml
src/tri9t_pipeline/: __init__.py  api.py  cli.py  config.py  domain.py  generator.py  parser.py  repository.py  schemas.py  service.py
tests/: test_api.py  test_parser.py  test_service.py
