[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tri9t-pdf-pipeline"
version = "0.1.0"
description = "PDF parsing, document versioning, and QA test-case generation pipeline"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.139",
  "httpx>=0.28",
  "pypdf>=6.0",
  "pydantic>=2.13",
  "uvicorn>=0.51",
]

[project.optional-dependencies]
dev = ["pytest>=9.1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
